--- a/index.html
+++ b/index.html
@@ -2,36 +2,21 @@
 
 <HEAD>
 
-<TITLE>Your Title Here</TITLE>
+<TITLE>смт. Гвардійське: відділ соц. захисту населення</TITLE>
 
 </HEAD>
 
 <BODY BGCOLOR="FFFFFF">
 
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
-
-<HR>
-
-<a href="http://somegreatsite.com">Link Name</a>
-
-is a link to another nifty site
-
-<H1>This is a Header</H1>
-
-<H2>This is a Medium Header</H2>
-
-Send me mail at <a href="mailto:support@yourcompany.com">
-
-support@yourcompany.com</a>.
-
-<P> This is a new paragraph!
-
-<P> <B>This is a new paragraph!</B>
-
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-
-<HR>
-
+<H1>Відділ соціального захисту населення у смт. Гвардійське</H1>
+  <p>
+      Консультації можливі по телефону стосовно льгот.<br>Стосовно соціальної допомоги, будь ласка, звертайтеся особисто в офісі.<br>
+    <b>При собі мати оригінали документів посвідчення особи.</b>
+  </p>
+  <p>
+    <i>Білик О. О.</i><br>
+    <i>Звертайтеся з 08:00 до 17:00 у будні. Вихідні: суббота, неділя.</i>
+  </p>
 </BODY>
 
 </HTML>
